# telomere-airflow-provider

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docker/: README.md
examples/: 1_simple_dag_tracking.py  2_task_level_tracking.py  3_best_practices.py
src/telomere_provider/: __init__.py  provider.yaml
src/telomere_provider/hooks/: __init__.py  telomere.py
src/telomere_provider/operators/: __init__.py  dag.py  telomere.py
src/telomere_provider/plugins/: __init__.py  listener.py  plugin.py
src/telomere_provider/utils/: __init__.py  dag_tracker.py  urls.py
tests/: conftest.py
tests/e2e/: run.sh  test_e2e.py
tests/e2e/dags/: e2e_dags.py
tests/matrix/: conftest.py  test_failure_matrix.py
tests/matrix/dags/: matrix_dags.py
tests/unit/: test_dag_operators.py  test_dag_tracker.py  test_hook.py  test_lifecycle_operator.py  test_listener.py
