[project]
name = "telomere-airflow-provider"
version = "2.0.1"
description = "Apache Airflow provider for Telomere lifecycle tracking"
authors = [{name = "Module Collective LLC", email = "hello@modulecollective.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow>=3.0,<4",
    "requests>=2.28.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "requests-mock>=1.12",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/modulecollective/telomere-airflow-provider"
Documentation = "https://github.com/modulecollective/telomere-airflow-provider#readme"
Repository = "https://github.com/modulecollective/telomere-airflow-provider"
"Bug Tracker" = "https://github.com/modulecollective/telomere-airflow-provider/issues"

[project.entry-points."apache_airflow_provider"]
provider_info = "telomere_provider:get_provider_info"

# Provider-declared plugins are skipped when Airflow lazily discovers
# providers (the default), while plugin entry points are always loaded.
[project.entry-points."airflow.plugins"]
telomere = "telomere_provider.plugins.plugin:TelomerePlugin"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
telomere_provider = ["provider.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not e2e'"
markers = [
    "e2e: end-to-end tests that need the docker compose stack and a real Telomere API key",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
